# bosch_mlops

./: .gitignore  Makefile  README.md  azure-pipelines.yml  databricks.yml  project_config.yml  pyproject.toml  requirements.txt  run.py  setup.py
configs/: config.yaml
configuration/pipeline_vars/: vars-config.yml
data/: README.md
docs/: DESIGN.md
resources/: inference.yml  test_job.yml  training.yml
src/: __init__.py  data_download.py  data_loader.py  evaluate.py  inference.py  model.py  model_registry.py  monitoring.py  preprocessing.py  retrain.py  train.py  utils.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_data_download.py  test_data_loader.py  test_model.py  test_utils.py
